assets/css/style.css
header {
    width: 960px;
    margin: 0 auto;
    display: flex;
    font-family: 'Georgia', Times, serif;
}

footer {
    width: 100%;
    text-align: center;
    margin: 0 auto;
    background-color: #666666;
    padding: 20px 0px;
    border-style: solid;
    border-width: 8px 0px 0px 0px;
    border-color: #4aaaa5;
    position: fixed;
    bottom: 0;
    left: 0;
}

.container {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
}

.container-vert {
    width: 960px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    margin: 20px auto;
    background-color: #ffffff;
    border-style: solid;
    border-width: 2px 2px;
    border-color: #cccccc;
}

#container-border {
    display: flex;
    flex-wrap: wrap;
    border-style: solid;
    border-width: 1px 1px;
    border-color: #cccccc;
    margin: 30px 0px auto;
}

#container-head {
    background-color: #ffffff;
    border-style: solid;
    border-width: 0px 0px 2px 0px;
    border-color:#cccccc;
}

.box {
    background-color: #ffffff;
    padding: 0px;
    margin: 0px;
}

.box-padded {
    background-color: #ffffff;
    margin: 10px 10px;
    flex: 0 0 98%;
}

.divider {
    margin: 40px 0px 0px 0px;
    color: #cccccc;
}

.sub-head {
    margin: 20px 10px;
    padding: 5px 0px;
    flex: 0 0 98%;
    color: #4aaaa5;
    border-style: solid;
    border-width: 0px 0px 2px 0px;
    border-color: #cccccc;
}

#main {
    width: 960px;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    flex-direction: vertical;
    text-align: left;
}

#name-box {
    text-align: center;
    flex-grow: 1;
    background-color: #4aaaa5;
    color: #ffffff;
}

#empty-box {
    text-align: center;
    flex-grow: 8;
}

#about-box {
    text-align: center;
    flex-grow: 0.125;
    margin: 40px 0px 0px 0px;
}

#portfolio-box {
    text-align: center;
    flex-grow: 0.125;
    margin: 40px 0px 0px 0px;
}

#contact-box {
    text-align: center;
    flex-grow: 0.125;
    margin: 40px 0px 0px 0px;
}

p {
    color: #777777;
    width: 960 px;
    line-height: 24px;
}

h2 {
    font-family: 'Georgia', Times, serif;
}

a:link {
    color: #777777;
    text-decoration: none;
}

a:visited {
    color: #777777;
    text-decoration: none;
}

a:hover {
    color: #4aaaa5;
    text-decoration: none;
}

img {
    float: left;
}

body {
    background-image: url("../images/dust_scratches.png");
}

#profile-pic {
    padding: 0px 20px 0px 0px;
}

#block-1 {
    order: 1;
    padding: 0px 10px;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

html, body {
    overflow: hidden;
}

